[tool.poetry]
name = "pysdmx"
version = "1.0.0-rc-2"
description = "Your opinionated Python SDMX library"
authors = [
    "Xavier Sosnovsky <xavier.sosnovsky@bis.org>",
    "Stratos Nikoloutsos <stratos.nikoloutsos@bis.org>"
]
readme = "README.rst"
documentation = "https://bis-med-it.github.io/pysdmx"
keywords = ["sdmx", "data discovery", "data retrieval", "metadata", "fmr"]
repository = "https://github.com/bis-med-it/pysdmx"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = {version = "0.*", optional = true}
msgspec = "0.*"
lxml = {version = "5.*", optional = true}
xmltodict = {version = "0.*", optional = true}
sdmxschemas = {version = "0.2.0", optional = true}
python-dateutil = {version = "^2.9.0.post0", optional = true}
parsy = {version = "^2.1", optional = true}
pandas = {version = "^2.2.2", optional = true}

[tool.poetry.extras]
dc = ["parsy", "python-dateutil"]
fmr = ["httpx"]
xml = ["lxml", "xmltodict", "sdmxschemas"]
data = ["pandas"]

[tool.poetry.group.dev.dependencies]
darglint = "^1.8.1"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.3.12"
flake8-comprehensions = "^3.11.1"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-pytest-style = "^1.7.2"
flake8-simplify = "^0.20.0"
mypy = "^1.1.1"
pytest = "^8.3.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.0.0"
respx = "^0.20.2"
pyroma = "^4.2"
lxml-stubs = "^0.5.1"
types-xmltodict = "^0.13.0.3"
types-python-dateutil = "^2.9.0.20240316"
pandas-stubs = "^2.2.2.240603"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 79

[tool.mypy]
files = "src"
disallow_untyped_defs = true
disallow_untyped_calls = true
ignore_errors = false
no_implicit_optional = true
show_column_numbers = true
strict_equality = true
strict_optional = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_return_any = false

[tool.coverage.run]
branch = true
